--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="icon" type="imagem/png" href="img/logo.svg"/>
     <title>Elliot Bot - Modere a sua comunidade do Discord</title>
+    <script src="jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -27,7 +28,7 @@
                 <h2 class="cont-principal-escrito-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
                 <button class="cont-principal-escrito-botao">Me Adicione!</button>
             </div>
-            <img class="cont-principal-escrito-imagem" src="./img/robo-conteudo.svg" alt="Imagem do Elliot Bot"/>
+            <img class="cont-principal-escrito-imagem" src="./img/robozinho.svg" alt="Imagem do Elliot Bot"/>
         </section>
     
         <section class="cont2">
